crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__set__missing_closing_curly_brace_2.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/set/missing_closing_curly_brace_2.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            8,
        ),
        range: 0..144,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        7,
                    ),
                    range: 134..144,
                    value: Set(
                        ExprSet {
                            node_index: NodeIndex(
                                6,
                            ),
                            range: 134..144,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(
                                            0,
                                        ),
                                        range: 135..136,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                BinOp(
                                    ExprBinOp {
                                        node_index: NodeIndex(
                                            5,
                                        ),
                                        range: 139..144,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    2,
                                                ),
                                                range: 139..140,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    4,
                                                ),
                                                range: 143..144,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | {1,
5 |
6 | x + y
  |      ^ Syntax Error: unexpected EOF while parsing
  |
